8038440: backport few C2 fixes Summary: Backports few C2 fixes Reviewed-by: kvn, kevinw