src/share/vm/runtime/arguments.cpp
@@ -3284,9 +3284,6 @@ jint Arguments::parse(const JavaVMInitArgs* args) {
 #endif // CC_INTERP
 
 #ifdef COMPILER2
-  if (!UseBiasedLocking || EmitSync != 0) {
-    UseOptoBiasInlining = false;
-  }
   if (!EliminateLocks) {
     EliminateNestedLocks = false;
   }
@@ -3329,6 +3326,12 @@ jint Arguments::parse(const JavaVMInitArgs* args) {
       UseBiasedLocking = false;
     }
   }
+
+#ifdef COMPILER2
+  if (!UseBiasedLocking || EmitSync != 0) {
+    UseOptoBiasInlining = false;
+  }
+#endif
 
   // set PauseAtExit if the gamma launcher was used and a debugger is attached
   // but only if not already set on the commandline
